--- a/README.adoc
+++ b/README.adoc
@@ -84,3 +84,4 @@ You can learn more about this booster and rest of the Eclipse Vert.x runtime in 
 NOTE: Run the set of integration tests included with this booster using `mvn clean verify -Popenshift,openshift-it`.
 PR Testing
 PR testing 2
+PR testing 3
